# examples

java-tutorial/: .bazelrc  BUILD  WORKSPACE
java-tutorial/src/main/java/com/example/: Greeting.java
java-tutorial/src/main/proto/: BUILD.bazel  helloworld.proto
